issue #3642 Fix rendering attachments with double whitespaces in their filenames (#3643)
* improve styles for the 'expired' badge

* fix .qq-upload-file height and line-height

* fix for filenames with two whitespaces

* fix vertical centering of attachments

* this.innerHTML -> $(this).text()

--- a/extension/css/cryptup.css
+++ b/extension/css/cryptup.css
@@ -2028,8 +2028,8 @@ table#compose #fineuploader .qq-upload-list li {
 }
 
 table#compose #fineuploader .qq-upload-list li .qq-upload-file {
-  line-height: 1em;
-  height: 1.1em;
+  line-height: 18px;
+  height: 18px;
   color: black;
   overflow-y: hidden;
 }
